RESOLVED FIXED94263
Web Inspector: console.time() should use performance.now()
https://bugs.webkit.org/show_bug.cgi?id=94263
Summary Web Inspector: console.time() should use performance.now()
Rico Sta Cruz
Reported 2012-08-16 16:11:04 PDT
The functions `console.time()` and `console.timeEnd()` display durations in milliseconds. Considering how this is most often used as an informal benchmarking tool, it may be best to give it more precision. console.time('hello'); /* Do something */ console.timeEnd('hello'); /* Output: */ hello: 83ms /* Expected output: */ hello: 83.59299992ms
Attachments
Patch (1.67 KB, patch)
2012-08-21 08:45 PDT, Andrey Kosyakov
no flags
Patch (2.20 KB, patch)
2012-08-21 09:00 PDT, Andrey Kosyakov
pfeldman: review+
webkit.review.bot: commit-queue-
Andrey Kosyakov
Comment 1 2012-08-21 08:45:49 PDT
Andrey Kosyakov
Comment 2 2012-08-21 09:00:09 PDT
WebKit Review Bot
Comment 3 2012-08-21 17:09:29 PDT
Comment on attachment 159699 [details] Patch Rejecting attachment 159699 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 Rebaseline various tests for Mountain Lion that differ from the generic results. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output: http://queues.webkit.org/results/13570012
Andrey Kosyakov
Comment 4 2012-08-22 01:42:44 PDT
Note You need to log in before you can comment on or make changes to this bug.