Web Inspector: console.time() should use performance.now() https://bugs.webkit.org/show_bug.cgi?id=94263

Reviewed by Pavel Feldman.

- use monotonicallyIncreasingTime() instead of currentTime() for measuring time intervals
    with console.time()/console.timeEnd()
- adjust precision to 3 digits after decimal point (i.e. microseconds) when formatting intervals;

* inspector/InspectorConsoleAgent.cpp:
(WebCore::InspectorConsoleAgent::stopTiming):

Canonical link: https://commits.webkit.org/112508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126276 268f45cc-cd09-0410-ab3c-d52691b4dbfc